--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -35,7 +35,7 @@
 	--sl-color-gray-1: #24272f;
 	--sl-color-gray-2: #4B4E5C;
 	--sl-color-gray-3: #545861;
-	--sl-color-gray-4: #888b96;
+	--sl-color-gray-4: #707385;
 	--sl-color-gray-5: #c0c2c7;
 	--sl-color-gray-6: #eceef2;
 	--sl-color-gray-7: #f5f6f8;
@@ -65,6 +65,13 @@ h3 {
 .main-pane {
   padding-left: 7rem;
   padding-right: 7rem;
+}
+
+@media (max-width: 1024px) {
+  .main-pane {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
 }
 
 /* Product Cards Styles */
